--- a/.github/workflows/autopost.yml
+++ b/.github/workflows/autopost.yml
@@ -2,7 +2,8 @@ name: 'Auto Post'
 
 on:
   schedule:
-    - cron: '0 9 * * 5'
+    - cron: '0 11 * 4-10 5'       # utc+2 during german summer time
+    - cron: '0 10 * 11-12,1-3 5'  # utc+1 during german winter time
   # push:
   #   branches:
   #     - 'master'
