--- a/.github/workflows/autopost.yml
+++ b/.github/workflows/autopost.yml
@@ -1,6 +1,7 @@
 name: 'Auto Post'
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 7 * 4-10 5'       # utc+2 during german summer time
     - cron: '0 8 * 11-12,1-3 5'  # utc+1 during german winter time
